--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Alicja Polanska"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
+  bio              : "PhD Student at UCL | ML for Astrophysics and beyond"
   location         : 
   employer         : "University College London"
   uri              : # URL
