--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ author:
   email            : "alicja.a.polanska@ucl.ac.uk" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
+  arxiv            : "https://arxiv.org/search/?searchtype=author&query=Polanska%2C+A"
   googlescholar    : "https://scholar.google.com/citations?user=fokSJbwAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   semantic         : # URL
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
