--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : 
   employer         : "University College London"
   uri              : # URL
-  email            : "alicja.a.polanska@ucl.ac.uk" 
+  email            : "alicja.polanska.22@ucl.ac.uk" 
 
   # Academic websites
   arxiv            : "https://arxiv.org/search/?searchtype=author&query=Polanska%2C+A"
