--- a/_config.yml
+++ b/_config.yml
@@ -221,6 +221,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  posters:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -276,6 +279,14 @@ defaults:
       type: talks
     values:
       layout: talk
+      author_profile: true
+      share: true
+  # _posters
+  - scope:
+      path: ""
+      type: posters
+    values:
+      layout: single
       author_profile: true
       share: true
 
